<resources>
    <string name="app_name">SEERSAndroid</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_sign_up">Sign in</string>
    <string name="title_activity_questionnairs">QuestionnairsActivity</string>
    <string name="title_activity_student_id">Studnet Id</string>

    <string name="tab_text_1">List View</string>
    <string name="tab_text_2">Map View</string>
    <string name="tab_questions_1">Questions 1</string>
    <string name="tab_questions_2">Questions 2</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_college">College</string>
    <string name="title_questionnairs">Questionnairs</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_colleges">CollegesActivity</string>
    <string name="title_activity_college_maps">Map</string>

    <string name="cannot_find_current_location_text">Cannot find current location</string>
    <string name="shr_hint_username">Username</string>
    <string name="shr_hint_password">Password</string>

    <string name="shr_app_name">YU</string>

    <string name="forget_Password">Forget Password</string>
    <string name="action_sign_up_short">Sign up</string>

    <string name="address_not_found_text">Address not found.</string>

    <string name="cat_bottomappbar_title">Bottom App Bar</string>
    <string name="cat_bottomappbar_description">
    A bottom app bar provides a docked bar at the bottom of the screen for common application
    actions. The bottom app bar includes a floating button for a primary action and a navigation bar
    area for secondary actions.
  </string>
    <string name="cat_bottomappbar_lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a, ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae, molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor bibendum, vel congue leo egestas.\n\n
Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel, molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula, in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque est.\n\n
Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh. Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc, quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus convallis.\n\n
Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper, libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim."</string>

    <string name="cat_bottomappbar_center">Center</string>
    <string name="cat_bottomappbar_fab_hide">Hide Fab</string>
    <string name="cat_bottomappbar_fab_show">Show Fab</string>
    <string name="cat_bottomappbar_scroll_hide">Hide on scroll</string>
    <string name="cat_bottomappbar_fab_anim_scale">Scale fab</string>
    <string name="cat_bottomappbar_fab_anim_slide">Slide fab</string>
    <string name="cat_bottomappbar_fab_circle">Circle</string>
    <string name="cat_bottomappbar_fab_diamond">Diamond</string>
    <string name="cat_bottomappbar_end">End</string>

    <string name="cat_bottomappbar_3d">3D</string>
    <string name="cat_bottomappbar_accelerator">Accelerator</string>
    <string name="cat_bottomappbar_search">Search</string>
    <string name="cat_bottomappbar_dashboard">Dashboard</string>
    <string name="cat_bottomappbar_navigation_button_content_description">Show navigation drawer</string>
    <string name="cat_bottomappbar_fab_button_content_description">FAB</string>
</resources>
